add product in menu

--- a/Frontend/InventoryToolProject/InventoryTool.UI/Views/Product/Index.cshtml
+++ b/Frontend/InventoryToolProject/InventoryTool.UI/Views/Product/Index.cshtml
@@ -1,15 +1,8 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Products";
 }
-<script src="~/Scripts/Common.js"></script>
 <h2>Index</h2>
 hello 
+Create new product 
 
-<script>
-  
-
-
-
-</script>
 
