--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Part/_PartList.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Part/_PartList.cshtml
@@ -8,6 +8,7 @@
             <th style="text-align:left">Category Type</th>
             <th style="text-align:left">Color Type</th>
             <th style="text-align:left">Material Type</th>
+            <th style="text-align:left">Unit</th>
             <th class="action-col"></th>  
         </tr>
     </thead>
@@ -24,20 +25,23 @@
                     <td title="@data.Part_Name" style="width:90%">
                         @data.Part_Name
                     </td>
-                    <td title="@data.Part_Type_Id" style="width:90%">
-                        @data.Part_Type_Id
+                    <td title="@data.Part_Type" style="width:90%">
+                        @data.Part_Type
                     </td>
-                    <td title="@data.Outsource_Type_Id" style="width:90%">
-                        @data.Outsource_Type_Id
+                    <td title="@data.Outsource_Type" style="width:90%">
+                        @data.Outsource_Type
                     </td>
-                    <td title="@data.Category_Id" style="width:90%">
-                        @data.Category_Id
+                    <td title="@data.Category_Name" style="width:90%">
+                        @data.Category_Name
                     </td> 
-                    <td title="@data.Color_Id" style="width:90%">
-                        @data.Color_Id
+                    <td title="@data.Color_Name" style="width:90%">
+                        @data.Color_Name
                     </td>
-                    <td title="@data.Material_Id" style="width:90%">
-                        @data.Material_Id
+                    <td title="@data.Material_Name" style="width:90%">
+                        @data.Material_Name
+                    </td>  
+                    <td title="@data.Unit_Name" style="width:90%">
+                        @data.Unit_Name
                     </td>                    
                     <td class="clsAction" style="width:10%">
                         <a href="javascript:void(0);" title="Edit" class="clsEditPart">
