--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Part/_PartList.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Part/_PartList.cshtml
@@ -8,6 +8,7 @@
             <th style="text-align:left">Category Type</th>
             <th style="text-align:left">Color Type</th>
             <th style="text-align:left">Material Type</th>
+            <th style="text-align:left">Criticality</th>            
             <th style="text-align:left">Unit</th>
             <th class="action-col"></th>  
         </tr>
@@ -39,6 +40,9 @@
                     </td>
                     <td title="@data.Material_Name" style="width:90%">
                         @data.Material_Name
+                    </td>  
+                    <td title="@data.Criticality_Name" style="width:90%">
+                        @data.Criticality_Name
                     </td>  
                     <td title="@data.Unit_Name" style="width:90%">
                         @data.Unit_Name
