--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_Layout.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
                     @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
                     <li>@Html.ActionLink("Product", "ProductIndex", "Product")</li>
                     <li>@Html.ActionLink("Part", "PartIndex", "Part")</li>
+                    <li>@Html.ActionLink("Stock", "PartStockIndex", "PartStock")</li>
                     @*<li>@Html.ActionLink("About", "About", "Home")</li>*@
                     @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                 </ul>
