Add contriol on stock page

--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Part/_PartList.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Part/_PartList.cshtml
@@ -4,10 +4,10 @@
             <th style="text-align:left">Part Code</th>
             <th style="text-align:left">Part Name</th>
             <th style="text-align:left">Part Type</th>
-            <th style="text-align:left">Outsource Type</th>
-            <th style="text-align:left">Category Type</th>
-            <th style="text-align:left">Color Type</th>
-            <th style="text-align:left">Material Type</th>
+            <th style="text-align:left">Outsource</th>
+            <th style="text-align:left">Category</th>
+            <th style="text-align:left">Color</th>
+            <th style="text-align:left">Material</th>
             <th style="text-align:left">Criticality</th>            
             <th style="text-align:left">Unit</th>
             <th class="action-col"></th>  
