--- a/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_FilterList.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_FilterList.cshtml
@@ -1,1 +1,68 @@
-﻿
+﻿<table style="width:100%;" cellspacing="0" class="table table-bordred" id="tblPartList">
+    <thead>
+        <tr>
+            <th style="text-align:left">Part Code</th>
+            <th style="text-align:left">Part Name</th>
+            <th style="text-align:left">Part Type</th>
+            <th style="text-align:left">Outsource</th>
+            <th style="text-align:left">Category</th>
+            <th style="text-align:left">Color</th>
+            <th style="text-align:left">Material</th>
+            <th style="text-align:left">Criticality</th>
+            <th style="text-align:left">Unit</th>
+            <th class="action-col"></th>
+        </tr>
+    </thead>
+    <tbody>
+        @if (Model != null)
+        {
+            foreach (var data in Model)
+            {
+                //Display mode row start here
+                <tr data-Part_Id="@data.Part_Id" class="display-mode">
+                    <td title="@data.Part_Code" style="width:90%">
+                        @data.Part_Code
+                    </td>
+                    <td title="@data.Part_Name" style="width:90%">
+                        @data.Part_Name
+                    </td>
+                    <td title="@data.Part_Type" style="width:90%">
+                        @data.Part_Type
+                    </td>
+                    <td title="@data.Outsource_Type" style="width:90%">
+                        @data.Outsource_Type
+                    </td>
+                    <td title="@data.Category_Name" style="width:90%">
+                        @data.Category_Name
+                    </td>
+                    <td title="@data.Color_Name" style="width:90%">
+                        @data.Color_Name
+                    </td>
+                    <td title="@data.Material_Name" style="width:90%">
+                        @data.Material_Name
+                    </td>
+                    <td title="@data.Criticality_Name" style="width:90%">
+                        @data.Criticality_Name
+                    </td>
+                    <td title="@data.Unit_Name" style="width:90%">
+                        @data.Unit_Name
+                    </td>
+                    <td class="clsAction" style="width:10%">
+                        <a href="javascript:void(0);" title="Edit" class="clsEditPart">
+                            <span class="glyphicon glyphicon-pencil"></span>
+                        </a>
+                        <a href="javascript:void(0);" title="Delete" class="clsDeletePart">
+                            <span class="glyphicon glyphicon-remove-sign"></span>
+                        </a>
+                    </td>
+                </tr>
+            }
+        }
+
+    </tbody>
+</table>
+
+
+
+
+
