--- a/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_FilterPanel.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_FilterPanel.cshtml
@@ -3,11 +3,11 @@
 <div>
     <div style="float: left;  margin: 0px 8px;">
         <label>Code</label>
-        <input type="text" class="form-control" id="Part_Code" placeholder="Part Code" style="width:300px;" >
+        <input type="text" id="Part_Code"  class="form-control" placeholder="Part Code" style="width:300px;" >
     </div>
     <div style="float: left;  margin: 0px 8px;">
         <label>Name</label>
-        <input type="text" class="form-control" id="Part_Name" placeholder="Part Name" style="width:300px;">
+        <input type="text" id="Part_Name" class="form-control"  placeholder="Part Name" style="width:300px;">
     </div>
     <div style="float: left;  margin: 0px 8px;">
         <label>Type</label>
